@@ -18,6 +18,8 @@ Version 2.0 (?):
     * main: code can be done with a file running in gamemode *.  See the readme for more info (specifically note to use a combined init: and main: routine to make sure it runs on every frame instead of skipping the first, and note that the CLI : INC $13 happens before instead of after)
 * Added support for resources to have extra bytes (implements issue #10)
 * Resource files can now include the exact line ";>dbr off" to tell UAT not to set the DBR when calling labels in that resource.  Otherwise, it will set the DBR when calling any resource labels, except for nmi: .  This was the default behavior of previous versions.
+* Added "quiet" and "debug" verbose levels
+* Added a %require_uber_ver() macro to the macro library file that lets a resource fail if the running version of UAT is lower than specified
 
 Library stuff:
 * If a library file has a label with the same name as the file, UAT no longer exports that label without the filename prefix.  E.g., a library file math.asm with the label math: would previously have had that label exposed simply as "math:", rather than "math_math:" as suggested by the documentation.  This was undocumented behavior and no longer happens.
